--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,5 +37,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'com.squareup.okhttp3:okhttp:4.9.0'
-    implementation 'com.neovisionaries:nv-websocket-client:2:14'
+    implementation 'com.neovisionaries:nv-websocket-client:2.14'
+    implementation 'com.squareup.moshi:moshi:1.12.0'
 }
