--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,5 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:4.9.0'
     implementation 'com.neovisionaries:nv-websocket-client:2.14'
     implementation 'com.squareup.moshi:moshi:1.12.0'
+    implementation 'at.favre.lib:bcrypt:0.9.0'
 }
