--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,9 @@ dependencies {
     implementation 'com.neovisionaries:nv-websocket-client:2.14'
     implementation 'com.squareup.moshi:moshi:1.12.0'
     implementation 'at.favre.lib:bcrypt:0.9.0'
+    api 'io.jsonwebtoken:jjwt-api:0.11.2'
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
+    runtimeOnly('io.jsonwebtoken:jjwt-orgjson:0.11.2') {
+        exclude group: 'org.json', module: 'json' //provided by Android natively
+    }
 }
