--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ plugins {
 
 android {
     compileSdkVersion 30
-    buildToolsVersion "30.0.3"
+    buildToolsVersion '30.0.3'
 
     defaultConfig {
         applicationId "com.weebkun.skipdq"
@@ -33,12 +33,13 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation files("libs/skipdq_net-0.2-SNAPSHOT.jar")
+    implementation 'com.squareup.okhttp3:okhttp:4.9.0'
+    implementation 'com.squareup.moshi:moshi:1.12.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    implementation 'com.squareup.okhttp3:okhttp:4.9.0'
     implementation 'com.neovisionaries:nv-websocket-client:2.14'
-    implementation 'com.squareup.moshi:moshi:1.12.0'
     implementation 'at.favre.lib:bcrypt:0.9.0'
     // when needed
     api 'io.jsonwebtoken:jjwt-api:0.11.2'
@@ -48,5 +49,5 @@ dependencies {
     }
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'androidx.room:room-runtime:2.4.0-alpha01'
-    annotationProcessor 'androidx.room:room-compiler:2.3.0-alpha01'
+    annotationProcessor 'androidx.room:room-compiler:2.4.0-alpha01'
 }
