--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         package="com.weebkun.skipdq">
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
             android:name=".SkipDQ"
@@ -12,7 +13,8 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/Theme.Skipdq">
-        <activity android:name=".LoginActivity"></activity>
+        <activity android:name=".OrderStatusActivity"></activity>
+        <activity android:name=".LoginActivity" />
         <activity android:name=".RegisterSchoolActivity" />
         <activity android:name=".HelpActivity" />
         <activity android:name=".FavouritesActivity" />
