--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,4 +50,5 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'androidx.room:room-runtime:2.4.0-alpha01'
     annotationProcessor 'androidx.room:room-compiler:2.4.0-alpha01'
+    implementation 'org.java-websocket:Java-WebSocket:1.5.1'
 }
