--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/Theme.Skipdq">
-        <activity android:name=".OrderStatusActivity" />
+        <activity android:name=".OrdersActivity" />
         <activity android:name=".LoginActivity" />
         <activity android:name=".RegisterSchoolActivity" />
         <activity android:name=".HelpActivity" />
